<resources>
    <string name="app_name">AppListaCurso</string>

    <string name="txt_titulo">Aplicativo Lista VIP Curso Android</string>

    <string name="edit_primeir_nome">Primeiro Nome</string>
    <string name="edit_sobrenome">Sobrenome</string>
    <string name="edit_curso_desejado">Nome do Curso Desejado</string>
    <string name="edit_telefone_contato">Telefone de Contato</string>

    <string name="btn_limpar">Limpar</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_finalizar">Finalizar</string>
</resources>