<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="#FA6060"
        android:textColor="@color/white"
        android:padding="8dp"
        android:text="@string/txt_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText android:id="@+id/edit_primeiro_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="3dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/edit_primeir_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        android:autofillHints="name"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText android:id="@+id/edit_sobrenome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="3dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/edit_sobrenome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_primeiro_nome"
        android:autofillHints="lastname"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText android:id="@+id/edit_curso_desejado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="3dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/edit_curso_desejado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sobrenome"
        android:autofillHints="name"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText android:id="@+id/edit_telefone_contato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="3dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/edit_telefone_contato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_curso_desejado"
        android:autofillHints="phone"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton android:id="@+id/btn_limpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:text="@string/btn_limpar"
        android:textSize="18sp"
        android:backgroundTint="#87B2DC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_telefone_contato" />

    <androidx.appcompat.widget.AppCompatButton android:id="@+id/btn_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_salvar"
        android:textSize="18sp"
        android:backgroundTint="#87B2DC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_telefone_contato" />

    <androidx.appcompat.widget.AppCompatButton android:id="@+id/btn_finalizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_finalizar"
        android:textSize="18sp"
        android:backgroundTint="#87B2DC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_telefone_contato" />

</androidx.constraintlayout.widget.ConstraintLayout>